(lang dune 3.7)

(name domains_lib)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name domains_lib)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune domainslib) 
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
